clusters/home/apps/magic/00namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: magic
  labels:
    app: magic
