clusters/home/apps/magic/magic-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magic
  namespace: magic
  labels:
    app: magic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: magic
  template:
    metadata:
      labels:
        app: magic
    spec:
      containers:
      - name: magic
        image: ghcr.io/itsachance/magic8ball-api:latest
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        imagePullPolicy: IfNotPresent
