clusters/home/apps/magic/magic-service.yml
apiVersion: v1
kind: Service
metadata:
  name: magic
  namespace: magic
  labels:
    app: magic
spec:
  selector:
    app: magic
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  type: ClusterIP
