clusters/home/apps/magic/magic-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: magic
  namespace: magic
  labels:
    app: magic
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: http
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: magic.bytechance.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: magic
            port:
              number: 8080
  tls:
  - hosts:
    - magic.bytechance.dev
    secretName: magic-tls
